# grounded_agent_forge

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVOLUTION_REPORT.md  EXPERIMENT_DESIGN.md  Makefile  README.md  ROADMAP.md  SECURITY.md  auto_evolve.py  beautify_readme.py  eval.py  evaluate.py  evolve_forever.py  generator.py  infinite_research_loop.py  mutate.py  mutation_engine.py  population_manager.py  program.md  prompt.txt  pyproject.toml  reflect.py  reflection.md  requirements.txt  run_evolution.sh  run_experiment.py  run_forge_loop.sh  script.sh  setup.py
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: badge.yml  ci.yml
agent_forge/: __init__.py  __main__.py  agent_spec_generator.py  full_agent_evaluator.py  meta_evolver.py  orchestrator.py
analysis/: correlation.py  plot_convergence.py  table_report.py
benchmarks/: tasks.json
dashboard/: main.py
docs/: ARCHITECTURE.md  COMPARISON.md
evaluator/: runtime_evaluator.py
experiments/: run_log.jsonl
population/: population.json  prompt_001.txt  prompt_002.txt  prompt_003.txt  prompt_004.txt  prompt_005.txt  prompt_006.txt  prompt_007.txt  prompt_008.txt  prompt_009.txt  prompt_010.txt  prompt_011.txt  prompt_012.txt  prompt_013.txt  prompt_014.txt  prompt_015.txt  prompt_016.txt  prompt_017.txt  prompt_018.txt  prompt_019.txt  prompt_020.txt  prompt_021.txt  prompt_022.txt  prompt_023.txt  prompt_024.txt  prompt_025.txt  prompt_026.txt  prompt_027.txt  prompt_028.txt  prompt_029.txt  prompt_030.txt  prompt_031.txt  prompt_032.txt  prompt_033.txt  prompt_034.txt  prompt_035.txt  prompt_036.txt  prompt_037.txt  prompt_038.txt  prompt_039.txt  (+173 more)
reports/: evolution_history.json  evolution_summary.md  regression_tracker.py  summary_report.py
tests/: test_agent_spec_generator.py  test_full_agent_evaluator.py  test_meta_evolver.py  test_orchestrator.py
