[project]
name = "grounded-evolution"
version = "0.2.0"
description = "Evaluator-grounded autonomous prompt evolution. Evolves prompts against real execution-based benchmarks using genetic algorithms, runtime validation, and meta-evolution."
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "F821"]
