[project]
name = "grounded-evolution"
version = "0.2.0"
description = "Evaluator-grounded autonomous prompt evolution. Evolves prompts against real execution-based benchmarks using genetic algorithms, runtime validation, and meta-evolution."
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "F821"]

# === FIXED FOR grounded_agent_forge ===
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["grounded_agent_forge_backup*", "tests*", "__pycache__*", "archive*"]

[project.optional-dependencies]
forge = [
    "sqlalchemy>=2.0",
    "alembic",
    "fastapi>=0.110",
    "uvicorn[standard]",
    "python-dotenv",
    "docker>=7.0",
    "httpx",
    "rich>=13",
]
