[project]
name = "grounded-agent-forge"
version = "1.0.0"
description = "Evolves full agent blueprints (system prompt + tools + memory + planning + self-evaluation) using Docker sandboxing, multi-objective fitness, meta-evolution, and task specialization."
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "F821"]

# === FIXED FOR grounded_agent_forge ===
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["grounded_agent_forge_backup*", "tests*", "__pycache__*", "archive*"]

[project.optional-dependencies]
forge = [
    "sqlalchemy>=2.0",
    "alembic",
    "fastapi>=0.110",
    "uvicorn[standard]",
    "python-dotenv",
    "docker>=7.0",
    "httpx",
    "rich>=13",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["agent_forge", "dashboard"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
